--- a/src/main/resources/texty_cs_CZ.properties
+++ b/src/main/resources/texty_cs_CZ.properties
@@ -10,7 +10,7 @@ room=M\u00edstnost
 start_date=Datum Za\u010d\u00e1tku
 end_date=Datum Konce
 price=Cena
-date_format=(dd.mm.rrrr)
+date_format=(rrrr-mm-dd)
 new_guest=Nov\u00fd Host
 name=Jm\u00e9no
 email=E-mail
