--- a/src/main/resources/texty_de_DE.properties
+++ b/src/main/resources/texty_de_DE.properties
@@ -10,7 +10,7 @@ room=Zimmer
 start_date=Anfangdatum
 end_date=Endedatum
 price=Preis
-date_format=(tt.mm.jjjj)
+date_format=(jjjj-mm-tt)
 new_guest=Neuer Gast
 name=Name
 email=E-mail
